Pipeline/javax_swing_plaf_synth/javax_swing_plaf_synthOutputResult.txt
Sample: SynthDesktopIconUI_3
----------------------------------------------------------------
output:
./javax_swing_plaf_synth/javaFiles/SynthDesktopIconUI_3.java:12: error: no suitable method found for paint(Graphics,JFrame)
        ui.paint(frame.getGraphics(), frame);
          ^
    method SynthDesktopIconUI.paint(Graphics,JComponent) is not applicable
      (argument mismatch; JFrame cannot be converted to JComponent)
    method SynthDesktopIconUI.paint(SynthContext,Graphics) is not applicable
      (argument mismatch; Graphics cannot be converted to SynthContext)
1 error


================================================================

Sample: SynthSeparatorUI_2
----------------------------------------------------------------
stderr:
Exception in thread "main" java.awt.HeadlessException: 
No X11 DISPLAY variable was set,
but this program performed an operation which requires it.
	at java.desktop/java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:166)
	at java.desktop/java.awt.Window.<init>(Window.java:553)
	at java.desktop/java.awt.Frame.<init>(Frame.java:428)
	at java.desktop/java.awt.Frame.<init>(Frame.java:393)
	at java.desktop/javax.swing.JFrame.<init>(JFrame.java:180)
	at SynthSeparatorUI_2.main(SynthSeparatorUI_2.java:7)

================================================================

Sample: SynthSeparatorUI_3
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.NullPointerException: Cannot invoke "javax.swing.plaf.synth.SynthStyle.getInt(javax.swing.plaf.synth.SynthContext, Object, int)" because "this.style" is null
	at java.desktop/javax.swing.plaf.synth.SynthSeparatorUI.getPreferredSize(SynthSeparatorUI.java:225)
	at SynthSeparatorUI_3.main(SynthSeparatorUI_3.java:8)

================================================================

Sample: SynthSeparatorUI_5
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.ClassCastException: class SynthSeparatorUI_5$1 cannot be cast to class javax.swing.JSeparator (SynthSeparatorUI_5$1 is in unnamed module of loader com.sun.tools.javac.launcher.Main$MemoryClassLoader @78047b92; javax.swing.JSeparator is in module java.desktop of loader 'bootstrap')
	at java.desktop/javax.swing.plaf.synth.SynthSeparatorUI.installUI(SynthSeparatorUI.java:71)
	at SynthSeparatorUI_5.main(SynthSeparatorUI_5.java:14)

================================================================

Sample: SynthSpinnerUI_3
----------------------------------------------------------------
================================================================

Sample: SynthTableHeaderUI_3
----------------------------------------------------------------
output:
./javax_swing_plaf_synth/javaFiles/SynthTableHeaderUI_3.java:5: error: class CustomTableHeaderUI is public, should be declared in a file named CustomTableHeaderUI.java
public class CustomTableHeaderUI extends SynthTableHeaderUI {
       ^
./javax_swing_plaf_synth/javaFiles/SynthTableHeaderUI_3.java:8: error: paint(Graphics,JComponent) in CustomTableHeaderUI cannot override paint(Graphics,JComponent) in SynthTableHeaderUI
    protected void paint(Graphics g, JComponent c) {
                   ^
  attempting to assign weaker access privileges; was public
2 errors


================================================================

Sample: SynthTableHeaderUI_5
----------------------------------------------------------------
output:
./javax_swing_plaf_synth/javaFiles/SynthTableHeaderUI_5.java:11: error: SynthUI is abstract; cannot be instantiated
        SynthUI ui = new SynthUI();
                     ^
./javax_swing_plaf_synth/javaFiles/SynthTableHeaderUI_5.java:14: error: incompatible types: JFrame cannot be converted to JComponent
        headerUI.update(frame.getGraphics(), frame);
                                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


================================================================

Sample: SynthToolTipUI_3
----------------------------------------------------------------
output:
./javax_swing_plaf_synth/javaFiles/SynthToolTipUI_3.java:5: error: class CustomToolTipUI is public, should be declared in a file named CustomToolTipUI.java
public class CustomToolTipUI extends SynthToolTipUI {
       ^
./javax_swing_plaf_synth/javaFiles/SynthToolTipUI_3.java:8: error: paint(Graphics,JComponent) in CustomToolTipUI cannot override paint(Graphics,JComponent) in SynthToolTipUI
    protected void paint(Graphics g, JComponent c) {
                   ^
  attempting to assign weaker access privileges; was public
2 errors


================================================================

Sample: SynthToolTipUI_4
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.ClassCastException: class SynthToolTipUI_4$1 cannot be cast to class javax.swing.JToolTip (SynthToolTipUI_4$1 is in unnamed module of loader com.sun.tools.javac.launcher.Main$MemoryClassLoader @7f010382; javax.swing.JToolTip is in module java.desktop of loader 'bootstrap')
	at java.desktop/javax.swing.plaf.synth.SynthToolTipUI.getComponentState(SynthToolTipUI.java:119)
	at java.desktop/javax.swing.plaf.synth.SynthToolTipUI.getContext(SynthToolTipUI.java:111)
	at java.desktop/javax.swing.plaf.synth.SynthToolTipUI.getPreferredSize(SynthToolTipUI.java:205)
	at SynthToolTipUI_4$2.getPreferredSize(SynthToolTipUI_4.java:17)
	at SynthToolTipUI_4.main(SynthToolTipUI_4.java:21)

================================================================

Sample: SynthToolTipUI_5
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.NullPointerException: Cannot invoke "javax.swing.plaf.synth.SynthStyle.getColor(javax.swing.plaf.synth.SynthContext, javax.swing.plaf.synth.ColorType)" because "style" is null
	at java.desktop/javax.swing.plaf.synth.SynthLookAndFeel.paintRegion(SynthLookAndFeel.java:403)
	at java.desktop/javax.swing.plaf.synth.SynthLookAndFeel.update(SynthLookAndFeel.java:367)
	at java.desktop/javax.swing.plaf.synth.SynthToolTipUI.update(SynthToolTipUI.java:143)
	at SynthToolTipUI_5.main(SynthToolTipUI_5.java:9)

================================================================

